Arreglando test 1/2